--- a/docs/Additional-CSS.css
+++ b/docs/Additional-CSS.css
@@ -1,3 +1,37 @@
+.woocommerce-store-notice__dismiss-link {
+	display: none;
+}
+.woocommerce-store-notice {
+	background-color: #8cba1c !important;
+	color: white;
+	padding: 0.25rem !important;
+	font-size: 1rem !important;
+	position: fixed !important;
+	font-weight: bold;
+	display: block;
+}
+div.header > div.headerinformation {
+	padding-top: 2rem;
+}
+
+.site-title::before {
+	content: "";
+	width: 1.5em;
+	height: 1.5em;
+	display: inline-block;
+	background-image: url("https://gensomeginseng.com/wp-content/uploads/2024/08/Gensome-Ginseng-Logo.png");
+	background-size: cover;
+	background-repeat: no-repeat;
+	margin-right: 0.25em;
+	position: relative;
+	top: 1.1rem;
+}
+h2.site-title {
+	font-size: 3.5rem;
+	margin-bottom: 1rem;
+	margin-top: -2.5rem;
+}
+
 div.cols-3.widget-column-3.last-foot-col {
 	position: absolute;
 	left: calc(62vw - (100vw - 1170px) / 2 + 2em);
@@ -13,7 +47,7 @@ ins {
 }
 
 #sec1section {
-	background-image: url("https://products.gensomeginseng.com/wp-content/uploads/2024/05/shutterstock_734716603-ezgif.com-webp-to-jpg-converter-resized.jpg");
+	background-image: url("https://gensomeginseng.com/wp-content/uploads/2024/05/shutterstock_734716603-ezgif.com-webp-to-jpg-converter-resized.jpg");
 	background-size: contain;
 }
 div.fancy-desc {
@@ -77,13 +111,14 @@ div.woocommerce
 	> a
 	> h2.woocommerce-loop-category__title {
 	position: absolute;
-	width: 100%;
 	top: 40%;
+	width: 100%;
 	color: white;
 	opacity: 0;
 	font-size: 40px !important;
 	font-weight: bold;
 	transition: 1s;
+	background: #8cba1c;
 }
 
 div.woocommerce > ul.products.columns-3 > li.product-category > a > img {
@@ -186,6 +221,12 @@ div.flex-viewport {
 	height: 550px !important;
 }
 @media screen and (max-width: 770px) {
+	div.header > div.headerinformation {
+		padding-top: 3rem;
+	}
+	h2.site-title {
+		margin-top: 0;
+	}
 	div.woocommerce-product-gallery__image.flex-active-slide {
 		width: 100vw !important;
 		height: auto !important;
