--- a/docs/Additional-CSS.css
+++ b/docs/Additional-CSS.css
@@ -1,6 +1,33 @@
 :root {
 	--theme-prime: #8cba1c;
 }
+
+.website-qrcode {
+	padding: 3rem;
+}
+.website-qrcode > img {
+	width: 100%;
+}
+.wechat-qrcode {
+	padding: 3rem;
+}
+.wechat-qrcode > img {
+	width: 100%;
+}
+
+.instagram-qrcode {
+	padding: 1rem;
+}
+.welcome-message {
+	line-height: 3rem !important;
+	font-size: 1.5rem !important;
+}
+.instagram-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	max-width: 100vw;
+}
 .woocommerce-store-notice__dismiss-link {
 	display: none;
 }
@@ -287,6 +314,15 @@ div.flex-viewport {
 	height: 550px !important;
 }
 @media screen and (max-width: 770px) {
+	.instagram-qrcode {
+		padding: 0 0 1rem 0;
+	}
+	.website-qrcode {
+		padding: 0 0 1rem 0;
+	}
+	.wechat-qrcode {
+		padding: 0 0 1rem 0;
+	}
 	.woocommerce-store-notice {
 		text-wrap: nowrap;
 		animation: scrolling-on-mobile 25s linear 0s infinite;
