--- a/docs/Additional-CSS.css
+++ b/docs/Additional-CSS.css
@@ -1,5 +1,10 @@
 :root {
 	--theme-prime: #8cba1c;
+	--theme-contrast: #f0f0d7;
+}
+
+html {
+	overflow-x: hidden;
 }
 
 .website-qrcode {
@@ -211,7 +216,7 @@ div.woocommerce
 	font-size: 40px !important;
 	font-weight: bold;
 	transition: 1s;
-	background: #8cba1c;
+	background: var(--theme-prime);
 }
 
 div.woocommerce > ul.products.columns-3 > li.product-category > a > img {
@@ -220,8 +225,8 @@ div.woocommerce > ul.products.columns-3 > li.product-category > a > img {
 }
 
 div.woocommerce > ul.products.columns-3 > li.product-category > a:hover > img {
-	filter: brightness(20%);
-	opacity: 0.8;
+	filter: brightness(30%);
+	opacity: 0.6;
 }
 
 div.woocommerce
@@ -229,7 +234,7 @@ div.woocommerce
 	> li.product-category
 	> a:hover
 	> h2.woocommerce-loop-category__title {
-	opacity: 1;
+	opacity: 0.7;
 }
 
 div.woocommerce
@@ -242,19 +247,26 @@ div.woocommerce
 
 .my-columns {
 	position: relative;
-	width: 99vw;
-	left: calc((1170px - 99vw) / 2);
+}
+div.my-column::before {
+	position: absolute;
+	content: "gensomeginseng.com";
+	width: calc(50vw - 50%) !important;
+	height: 100%;
+	background: var(--theme-prime) !important;
+	color: var(--theme-prime) !important;
+	z-index: -1;
+	left: calc(50% - 50vw);
+	display: block;
 }
 
 div.my-column {
 	position: relative;
-	max-width: calc(1170px / 2);
-	left: calc((99vw - 1170px) / 2);
 }
 
 div.my-column::after {
 	position: absolute;
-	background-color: #8cba1c;
+	background-color: var(--theme-prime);
 	font-family: FontAwesome;
 	content: "\f105";
 	color: white;
@@ -296,17 +308,27 @@ div.my-column > div > div > div > div > a {
 }
 
 div.my-column-right {
-	position: relative;
-	left: calc((99vw - 1170px) / 2);
-	max-width: 48.1vw;
 	text-align: center;
+	padding: 5rem;
+}
+div.my-column-right::after {
+	display: block;
+	content: "gensomeginseng.com";
+	position: absolute;
+	background: var(--theme-contrast);
+	color: var(--theme-contrast);
+	width: 100vw;
+	height: 100%;
+	top: 0;
+	left: calc(-50vw + 50%);
+	z-index: -2;
 }
 
 div.woocommerce.columns-3 {
 	position: relative;
-	width: 99vw;
-	left: calc((1170px - 99vw) / 2);
-	background-color: #f0f0d7;
+	width: 100vw;
+	left: calc(50% - 50vw);
+	background-color: var(--theme-contrast);
 }
 
 div.flex-viewport {
@@ -377,15 +399,23 @@ div.flex-viewport {
 		left: 0;
 	}
 	.my-columns {
-		position: static;
-		width: auto;
+		position: relative;
+		width: 100vw;
+		left: calc(50% - 50vw);
 	}
 	div.my-column {
 		position: static;
 	}
+	div.my-column::before {
+		display: none;
+	}
 	div.my-column-right {
 		position: static;
 		max-width: 100%;
+		padding: 0;
+	}
+	div.my-column-right::after {
+		display: none;
 	}
 	div.my-column::after {
 		display: none;
@@ -411,8 +441,9 @@ div.flex-viewport {
 	}
 
 	div.woocommerce.columns-3 {
-		position: static;
-		width: 100%;
+		position: relative;
+		width: 100vw;
+		left: calc(50% - 50vw);
 	}
 	div.woocommerce
 		> ul.products.columns-3
